--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-table": "^7.7.19",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.0"
